website/src/css/customTheme.css
/* ... */
.help-page .card .header {
  padding: 0;
}

.help-page .card h2 {
  display: flex;
  align-items: center;
}

.help-page .card h2 img {
  padding-bottom: 2px;
  height: 28px;
  margin-right: 14px;
}

.help-page #documents-icon {
  margin-right: 10px;
  margin-left: -6px;
}

.help-page .card p {
  color: #6b7280;
}

.help-page .card .buttons {
  margin-top: 18px;
}

.help-page .card .buttons a {
  font-size: 18px;
  font-weight: 600;
  transition: all 0.3s;
  margin-right: 32px;
}

.help-page .card .buttons a:hover {
  text-decoration: none;
}

.help-page .card .buttons a:hover svg {
  transform: translateX(2px);
}

.help-page .card .buttons svg {
  height: 12px;
  margin-left: 4px;
  transition: transform 0.3s;
}

.help-page .card .buttons {
  display: flex;
}

.team-githubLogo {
  height: 24px;
}

.downloads-subtitle {
  color: var(--color-downloads-subtitle);
}

.downloads-leftsidelinks {
  color: var(--color-downloads-leftsidelinks);
}

.downloads-leftsidelink:hover {
  color: var(--color-downloads-leftsidelink-hover);
}

.downloads-versioninfo {
  color: var(--color-downloads-rightside-versioninfo);
}

.downloads-versioninfo-span {
  color: var(--color-downloads-rightside-versioninfo-span);
}

.downloads-dropdown {
  background-color: var(--color-downloads-dropdown);
}

.download-dropdown-item:hover {
  background-color: var(--color-downloads-dropdown-items);
}

.team-repocard {
  color: var(--color-team-repocard);
}

.team-repocard:hover {
  color: var(--color-team-repocard-hover);
}

.docs-subtitle {
  color: var(--color-docs-subtitle);
}

.docs-versioninfo {
  color: var(--color-docs-versioninfo);
}

.help-page .card p {
  color: var(--color-help-subtitle);
}

.pic-wrapper {
  width: 350px;
  position: fixed;
  display: flex;
  right: 0;
  bottom: 0;
  z-index: 999;
  outline: 0;
  overflow: auto;
  border: 0;
  box-shadow: 0 0 20px -12px #626365;
}

.pic-wrapper a {
  display: flex;
}

.pic-wrapper-close {
  position: absolute;
  z-index: 1000;
  top: 10px;
  right: 10px;
  padding: 5px;
  font-weight: 900;
  color: rgb(135, 151, 172);
  font-size: 16px;
  outline: none;
  border-radius: 100px;
  border: 1px solid transparent;
}

.pic-wrapper-close:hover {
  cursor: pointer;
}

.pic-wrapper-close svg {
  width: 10px;
  height: 10px;
  display: inherit;
}

@media only screen and (max-width: 440px) {
  .pic-wrapper {
    width: 70%;
  }
}

/*plugin hub section*/
.plugin-logo {
  margin-top: 10px;
  max-width: 250px;
  max-height: 180px;
  transform: scale(1);
  transition: transform 0.5s ease;
}

.plugin-logo.default {
  opacity: 0.2;
}

.overflow{
 overflow: hidden;
}

.plugin-logo:hover {
  transform: scale(1.2);
}

.read-more-link {
  color: #d0312d;
  font-size: 0.8rem;
  font-weight: 500;
  text-align: left;
  padding-bottom: 2px;
  display: flex;
}
.read-more-link:hover {
  color: var(--color-primary);
  text-decoration: var(--ifm-link-hover-decoration);
}

/*Sidebar Section*/
.sidebar-link{
  color: #d0312d;
}

.sidebar-link :hover {
  color: #ffb3b3;
}

/* Mobile-phones and tablet styles */
@media only screen and (min-width: 300px) and (max-width: 1100px) {
  body {
    overflow-x: hidden !important;
  }

  .hero-sec-wrap{
    display: block;
    height: fit-content;
  }

  .homeCanvas-overlay {
    position: absolute;
    width: 100vw;
    height: 50vh;
    background: #EBE6DC;
    top: -1px;
    right: 0px;
  }
  
  .hero-text {
    height: 50%;
    width: 100%;
    padding: 5rem 0 0 6vw;
  }

  .hero-title {
    width: 100vw;
    font-size: 3.4rem;
  }
  
  .hero-subtitle {
    font-size: 1.05rem;
    line-height: 28px;
    margin: 25px 0 24px 0;
    padding-right: 20px;
  }
  
  .add-margin {
    margin: 30px 0;
  }

  .homeCanvas{
    width: 100vw;
    height: 50vh;
  }

  .hldesign-graphic{
    width: 100%;
  }

  .arch-scale-svg {
    display: none;
  }

  .arch-card-border {
    width: 100%;
    left: 0;
    top: 10px;
  }

  .arch-head, .compare-head, .testimonials-head, .docs-promo-head, .oss-promo-head {
    left: 7%;
    width: 83%;
  }
  
  .arch-subtitle, .compare-subtitle, .testimonials-subtitle, .docs-promo-subtitle, .oss-promo-subtitle {
    left: 7%;
    width: 85%;
  }

  .add-left-margin{
    position: relative;
    left: 7%;
  }

  .add-left-margin-feat{
    position: absolute;
    left: 7%;
  }
  
  .bottom-pos {
    bottom: 34%;
  }

  .feat-head {
    font-size: 2.13rem;
    width: 84%;
  }
  
  .feat-head-desc{
    left: 7%;
  }
  
  .feat-desc{
    width: 83%;
    left: 7%;
  }

  .feat-container-d {
    display: none;
  }
  .feat-container-m {
    display: block;
  }

  .benefit{
    background: #fff8f6;
    padding: 50px 0;
    height: 100vh;
  }

  .row-benefit {
    margin: 0 0px;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-flow: column-reverse;
    position: absolute;
    height: 100vh;
    width: 100vw;
  }

  .benefit-infograph{
    width: 100%;
    padding: 0 0 60px 0;
  }

  .row-reverse{
    flex-flow: column;
  }

  .row-hidden{
    opacity: 0;
  }

  .table {
    width: 100%;
    display: block;
  }
  
  .docs-promo {
    flex-flow: column-reverse;
    padding: 50px 0;
  }

  .docs-promo-video {
    width: 100%;
  }

  .docs-promo-video>video {
    padding: 0 26px 35px 26px;
    width: 100%;
    height: auto;
  }

  .oss-promo {
    flex-flow: column;
    background: #121010;
    padding: 50px 0 0 0;

  }

  .oss-promo-text {
    width: 100%;
  }

  .oss-promo-infograph {
    width: 100%;
    margin-top: 30px;
  }

  .event-card {
    margin: 0 20px 20px 20px;
  }

  .event-card-container {
    flex-flow: column;
  }

  .newsletter>p {
    text-align: center;
  }

  .endcta-text {
    font-size: 2.4rem;
  }

  .navbar {
    transform: none !important;
  }

  .rocket {
    width: 12vw;
    height: auto;
    transform: rotate(45deg);
  }
}

@media only screen and (min-height: 500px) and (max-height: 670px) {
  .benefit-infograph {
    width: 70%;
    padding: 0 0 60px 0;
  }
}
/* ... */

